Removed supplementary alignments for destructive signals. Release minor change version 0.0.7.1. Preparing major release 1.0.0.